# tensorrt_pytorch

./: README.md
trt5/python/: evaluation.py  result.txt.crop  result.txt.normalize
trt5/src/: FeatureExtract.cpp  main.cpp.bak
trt6/: CMakeLists.txt
trt6/include/: FeatureExtract.h  FeatureExtract.h.bak
trt6/model/: result.txt  train.onnx
trt6/python/: evaluation.py  result.txt
trt6/src/: FeatureExtract.cpp  ModelConvertEngine.cpp  ModelConvertEngine.cpp.bak  main.cpp  main.cpp.bak
